# Telco-Customer-Churn

./: .gitignore  README.md  chrun.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/interim/: churn_type_fixed.parquet
data/raw/: churn_raw.csv
deploy/: telco_churn_streamlit.py  telco_churn_streamlit_batch.py  telco_churn_streamlit_form.py
models/: Churn_classification-SVM-v1.joblib  telco_churn_logistic_regression_model.joblib
notebooks/: baseline_model.ipynb  data_download.ipynb  data_exploration_description.ipynb  eda.ipynb  feature_engineering.ipynb  model_selection.ipynb
src/: pipeline_utils.py  simple_train_pipeline.py
