[project]
name = "telco-customer-churn"
version = "0.1.0"
description = "Desarrollo de un proyecto de ciencia de datos end to end"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "seaborn>=0.13.2",
]
